RetailDevGit/src/objects/ARM_Survey_Submission__c.object
<CustomObject>
    <description>Appirio Retail Management (ARM) Object</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ARM Survey Submissions</relationshipLabel>
        <relationshipName>ARM_Survey_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>This should be the Id of the Postgres record in Heroku.  This will help us map all the result records to this submission record</description>
        <externalId>true</externalId>
        <inlineHelpText>This should be the Id of the Postgres record in Heroku.  This will help us map all the result records to this submission record</inlineHelpText>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>ARM_Survey__c</referenceTo>
        <relationshipLabel>ARM Survey Submissions</relationshipLabel>
        <relationshipName>ARM_Survey_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Actual_Score__c</fullName>
        <label>Total Actual Score</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Possible_Score__c</fullName>
        <description>total possible points on a scored survey</description>
        <label>Total Possible Score</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Survey Submission</label>
    <listViews>
        <fullName>TODAY</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Survey__c</columns>
        <columns>Score__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>TODAY&apos;s Submissions</label>
    </listViews>
    <nameField>
        <displayFormat>SS-{00000}</displayFormat>
        <label>Survey Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ARM Survey Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>